test(get-categories) : testing and create api get by id categories
