# src/app/api/v1/categories/route.ts
@@ -100,4 +100,87 @@ const router = Router();
  */
 router.post("/", CategoriesController.createCategory);
 
+
+
+/**
+ * @swagger
+ * /categories:
+ *   get:
+ *     summary: Get Category
+ *     description: Get category by Id
+ *     tags: [Categories]
+ *     requestBody:
+ *       required: true
+ *       content:
+ *         application/json:
+ *           schema:
+ *             type: object
+ *             required:
+ *               - id
+ *     responses:
+ *       201:
+ *         description: Category has been find successfully
+ *         content:
+ *           application/json:
+ *             schema:
+ *               type: object
+ *               properties:
+ *                 success:
+ *                   type: boolean
+ *                   example: true
+ *                 message:
+ *                   type: string
+ *                   example: "[SUCCESS] Category has been find"
+ *                 data:
+ *                   type: object
+ *                   properties:
+ *                     id:
+ *                       type: string
+ *                       example: "66c9e1f3b3a1c8f6c4d1a999"
+ *                     name:
+ *                       type: string
+ *                       example: Technology
+ *                     organizerId:
+ *                       type: string
+ *                       example: "66c9e1f3b3a1c8f6c4d1a912"
+ *                     organizer:
+ *                       type: object
+ *                       properties:
+ *                         id:
+ *                           type: string
+ *                           example: "66c9e1f3b3a1c8f6c4d1a912"
+ *                         name:
+ *                           type: string
+ *                           example: Google Developer Group
+ *                         createdAt:
+ *                           type: string
+ *                           format: date-time
+ *                         updatedAt:
+ *                           type: string
+ *                           format: date-time
+ *                     createdAt:
+ *                       type: string
+ *                       format: date-time
+ *                     updatedAt:
+ *                       type: string
+ *                       format: date-time
+ *       400:
+ *         description: Failed to find id category
+ *         content:
+ *           application/json:
+ *             schema:
+ *               type: object
+ *               properties:
+ *                 success:
+ *                   type: boolean
+ *                   example: false
+ *                 message:
+ *                   type: string
+ *                   example: "[FAILED] Failed to find id category"
+ *                 errors:
+ *                   type: string
+ *                   example: "Not Found"
+ */
+router.get("/:id", CategoriesController.findByID);
+
 export default router;
